<resources>
    <string name="app_name">OhMyDog</string>
    <string name="action_settings">Settings</string>

    <string name="recentlyViewedLbl">Recently Added Dog\'s</string>
    <string name="appWebsite">ohmydogsirl@gmail.com</string>

    <string name="radioLost">Lost</string>
    <string name="radioFound">Found</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="action_search">Search</string>
    <string name="imagebutton">imageButton</string>
    <string name="submit_post">Submit Post</string>
    <string name="dog_breed">Dog Breed ...</string>
    <string name="dog_description">Description ...</string>
    <string name="jxs">jxs</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="breed">Breed</string>
    <string name="description">Description</string>
    <string name="dog_image">Dog image</string>
    <string name="lostandfound">LostOrFound</string>
    <string name="you_have_no_dogs_added_add_a_dog">You have no Dogs added, add a dog</string>
    <string name="title_activity_splash">Splash</string>
    <string name="auth_failed">Auth failed</string>
    <string name="password">Password ...</string>
    <string name="LoginBtn">Log In</string>
    <string name="email">Email ...</string>
    <string name="get_an_account">get an account</string>
    <string name="setupimagebutton">setupimagebutton</string>
    <string name="enter_your_display_name">Enter your Display Name ...</string>
    <string name="finish_setup">Done</string>
    <string name="textview">LostOrFound</string>
    <string name="breed2">Breed</string>
    <string name="full_dog_image">Full dog image</string>
    <string name="FullDogDesc">Full Dog description</string>
    <string name="log_out">Log Out</string>
    <string name="filter">Filter ...</string>
    <string name="username">username</string>
    <string name="usernamepic">UsernamePic</string>

    <string name="ccc">lat</string>
    <string name="ccc2">AIzaSyCrlyYDoCjQ7yIEh9u1x3WnyAWvyQ9C6rE</string>

    <string name="google_maps_key">AIzaSyCrlyYDoCjQ7yIEh9u1x3WnyAWvyQ9C6rE</string>
    <string name="delete">Delete</string>


    <string-array name="dogs_array">
        <item>Other</item>
        <item>Labrador</item>
        <item>Jack Russell Terrier</item>
        <item>German Shepherd</item>
        <item>Border Collie</item>
        <item>Golden Retriever</item>
        <item>Springer Spaniel</item>
        <item>Boxer</item>
        <item>Cocker Spaniel</item>
        <item>Greyhound</item>
        <item>Rottweiler</item>
    </string-array>

</resources>
