<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">

     <ImageView
         android:id="@+id/imageViewId"
         android:layout_width="65dp"
         android:layout_height="65dp"
         android:contentDescription="@string/dog_image"
         android:src="@mipmap/add_btn" />



     <LinearLayout
         android:id="@+id/brAndDescId"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:orientation="vertical"
         android:layout_marginTop="5dp"
         android:layout_marginStart="5dp">

         <TextView
             android:id="@+id/doglistId"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:gravity="start"
             android:text="@string/breed"
             android:textSize="16sp"
             android:textStyle="bold" />

         <TextView
             android:id="@+id/dogDescId"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="@string/description" />

     </LinearLayout>


     <ImageView
         android:id="@+id/imageLandFId"
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:layout_gravity="center"
         android:contentDescription="@string/lostandfound"
         android:src="@mipmap/add_btn" />

 </LinearLayout>
</RelativeLayout>