<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/fullLandFid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/textview"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fullBreedId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/breed2"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/fullDogImgId"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/full_dog_image"
            app:srcCompat="@mipmap/add_btn" />

        <TextView
            android:id="@+id/fullDogDscId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/FullDogDesc"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/fullUsernamePicId"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:srcCompat="@mipmap/add_btn"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"/>


            <TextView
                android:id="@+id/fullUsernameId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/username"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>


        <Button
            android:id="@+id/singeRemove"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_red_light"
            android:text="@string/delete"
            android:visibility="invisible" />
    </LinearLayout>

  </ScrollView>
