<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context="ie.wit.ohmydog.activities.SetupActivity">

    <ImageButton
        android:id="@+id/setupImageBtn"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/setupimagebutton"
        android:scaleType="centerCrop"
        app:srcCompat="@mipmap/ic_face"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/setupNameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setupImageBtn"
        android:layout_marginTop="28dp"
        android:background="@drawable/input_outline"
        android:padding="15dp"
        android:ems="10"
        android:hint="@string/enter_your_display_name"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/setupSubmitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/setupNameField"
        android:layout_marginTop="39dp"
        android:background="@color/bannerBGColor"
        android:text="@string/finish_setup" />
</RelativeLayout>
